Fix word wrapping in timeline tab

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -307,6 +307,7 @@ a:hover {
   max-width: 1200px;
   margin: 150px auto;
   text-align: left;
+  word-break: break-word;
 }
 
 /* The actual timeline (the vertical ruler) */
